# VSGAN

./: .deepsource.toml  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  VSGAN.ipynb  banner.xcf  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: build.yml  cd.yml  ci.yml  dist.yml  pypi-ci.yml  release-packager.yml  version-test.yml
docs/: Gemfile  _config.yml  api.rst  building.rst  conf.py  getting-started.rst  history.rst  index.rst  installation.rst  license.rst  models.rst  terminology.rst  troubleshooting.rst  usage.rst
docs/_data/: navigation.yml
docs/_docs/1. Getting Started/: 1-introduction.md  2-installation.md  3-updating.md  4-building.md
docs/_docs/2. Usage/: 1-quick-start.md  2-models.md
docs/_docs/3. Functions/: 1-vsgan-class.md  2-vsgan-load-model.md  3-vsgan-run.md  4-vsgan-execute.md
docs/_docs/4. Meta/: 1-license.md
docs/_layouts/: 404.html
docs/_pages/: 404.md
docs/_site/: 404.html  index.html  sitemap.xml
docs/_site/assets/css/: main.css
docs/_site/assets/js/lunr/: lunr-store.js
docs/_site/building/: index.html
docs/_site/installation/: index.html
docs/_site/license/: index.html
docs/_site/models/: index.html
docs/_site/quick-start/: index.html
docs/_site/updating/: index.html
docs/_site/vsgan-class/: index.html
docs/_site/vsgan-execute/: index.html
docs/_site/vsgan-load-model/: index.html
docs/_site/vsgan-run/: index.html
docs/_static/images/: icon.xcf
docs/_static/js/: sphinxcontrib-images.js
docs/_static/styles/: custom.css
docs/_templates/: page.html
docs/_templates/sidebar/: brand.html  github-buttons.html
vsgan/: RRDBNet.py  RRDBNet_arch_old.py  RRDBNet_arch_old_block.py  __init__.py  blocks.py  constants.py  utilities.py  vsgan.py
vsgan/archs/: EGVSR.py  ESRGAN.py  RealESRGAN.py  __init__.py  basearch.py  blocks.py  constants.py  egvsr.py  esrgan.py  hat.py  swinir.py
vsgan/models/ESRGAN/: Network.py  __init__.py
vsgan/networks/: __init__.py  basenetwork.py  egvsr.py  esrgan.py  frnet.py  hat.py  rrdb.py  srvgg.py  swinir.py
