[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'vsgan'
version = '1.6.4'
description = 'VapourSynth Single Image Super-Resolution Generative Adversarial Network (GAN)'
authors = ['rlaphoenix <rlaphoenix@pm.me>']
license = 'MIT'
readme = 'README.md'
homepage = 'https://github.com/rlaphoenix/vsgan'
repository = 'https://github.com/rlaphoenix/vsgan'
keywords = ['vapoursynth', 'upscaling', 'gan', 'deep-learning', 'esrgan']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Topic :: Multimedia :: Video',
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = [
    {version = "^1.21.6", python = "^3.7"},
    {version = "^1.23.1", python = ">=3.8"}
]
VapourSynth = [
    # https://github.com/vapoursynth/vapoursynth/issues/858
    {version = "^48", optional = true, python = "^3.7"},
    {version = "^57", optional = true, python = "^3.9"},
    {version = "^59", optional = true, python = ">=3.10 || ^3.8"},
]
torch = {version = "^1.10.0", optional = true}
Sphinx = {version = "^4.3.2", optional = true}
furo = {version = "^2022.06.21", optional = true}
dunamai = {version = "^1.12.0", optional = true}
m2r2 = {version = "^0.3.2", optional = true}
sphinxcontrib-youtube = {version = "^1.2.0", optional = true}
sphinxcontrib-images = {version = "^0.9.4", optional = true}

[tool.poetry.extras]
vs = ["VapourSynth"]
pytorch = ["torch"]
docs = ["Sphinx", "furo", "dunamai", "m2r2", "sphinxcontrib-youtube", "sphinxcontrib-images"]

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.isort]
line_length = 120
