[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'vsgan'
version = '1.6.4'
description = 'VapourSynth Single Image Super-Resolution Generative Adversarial Network (GAN)'
authors = ['rlaphoenix <rlaphoenix@pm.me>']
license = 'MIT'
readme = 'README.md'
homepage = 'https://github.com/rlaphoenix/vsgan'
repository = 'https://github.com/rlaphoenix/vsgan'
keywords = ['vapoursynth', 'upscaling', 'gan', 'deep-learning', 'esrgan']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Topic :: Multimedia :: Video',
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
numpy = "^1.24.2"
VapourSynth = [
    # https://github.com/vapoursynth/vapoursynth/issues/858
    {version = "57", optional = true, python = "~3.9"},
    {version = "61", optional = true, python = "~3.10"},
    {version = "62", optional = true, python = "^3.11 || ~3.8"},
]
torch = {version = "^1.13.1", optional = true}
Sphinx = {version = "^6.1.3", optional = true}
furo = {version = "^2023.3.27", optional = true}
dunamai = {version = "^1.16.0", optional = true}
m2r2 = {version = "^0.3.3", optional = true}
sphinxcontrib-youtube = {git = "https://github.com/sphinx-contrib/youtube.git", branch="master", optional = true}
sphinxcontrib-images = {version = "^0.9.4", optional = true}

[tool.poetry.extras]
vs = ["VapourSynth"]
pytorch = ["torch"]
docs = ["Sphinx", "furo", "dunamai", "m2r2", "sphinxcontrib-youtube", "sphinxcontrib-images"]

[tool.poetry.dev-dependencies]
pre-commit = "^3.2.1"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.isort]
line_length = 120
