[metadata]
name = vsgan
version = 1.2.1
url = https://github.com/rlaPHOENiX/vsgan
author = PHOENiX
author_email = pragma.exe@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = MIT
license_file = LICENSE
description = VapourSynth Single Image Super-Resolution Generative Adversarial Network (GAN)
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = vapoursynth, editing, restoration, upscaling, gans, gan, deep-learning, image-manipulation, esrgan
platforms = any

[options]
install_requires=
    VapourSynth
    numpy
    torch
packages = find:
